# Auto-Download-and-Folder-Choosing

./: .gitignore  README.md  autodf.py  pyproject.toml
tests/: test_autodf.py
