[tool.poetry]
name = "AutoDF"
version = "0.1.0"
description = ""
authors = ["Diogo Bispo <38961424+OfficialBispo@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
qbittorrent-api = "^2021.12.24"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
